# signature

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  conanfile.txt
src/: .clang-format  arg_parser.cc  arg_parser.h  config.h  context.h  file.cc  file.h  main.cc  md5.cc  md5.h  processing.cc  processing.h  reader.cc  reader.h  util.h  worker.cc  worker.h  writer.cc  writer.h
test/: arg_parser.cc  md5.cc
